--- a/codex.html
+++ b/codex.html
@@ -2,6 +2,7 @@
 
 <div id="state"></div>
 
-<input type="text" placeholder="input" id="input">
+<textarea rows=2 cols=80 id="input">
+</textarea>
 
 <script src="interpreter.js"></script>
