--- a/codex.html
+++ b/codex.html
@@ -1,8 +1,8 @@
-<div id="output" style="white-space: pre-wrap;"></div>
+<div id="output" style="font-family: monospace; white-space: pre-wrap;"></div>
 
 <div id="state"></div>
 
-<textarea rows=2 cols=80 id="input">
+<textarea rows=2 cols=80 id="input" autofocus>
 </textarea>
 
 <script src="interpreter.js"></script>
